--- a/src/public/crearProducto.html
+++ b/src/public/crearProducto.html
@@ -1,44 +1,84 @@
+<!-- interfaz/crearProducto.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Crear Producto</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/estilos.css">
+  <title>Nuevo Producto - Biddable</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Bootstrap + Fuentes -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="css/crearProducto.css">
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-  <header>
-    <h1>Nuevo Producto</h1>
-  </header>
+<header class="bg-white border-bottom shadow-sm sticky-top header-grande">
+  <div class="container d-flex align-items-center justify-content-between py-3">
+    <a href="index.html" class="d-flex align-items-center gap-3 text-decoration-none">
+      <img src="uploads/logo-removebg-preview.png" alt="Logo" height="60" />
+      <span class="fw-bold text-dark fs-4">Biddable</span>
+    </a>
+    <nav class="d-flex align-items-center gap-4">
+      <a href="productos.html" class="nav-link">Subastas</a>
+      <a href="misPujas.html" class="nav-link">Mis Pujas</a>
+      <a href="misProductos.html" class="nav-link">Mis Productos</a>
+      <a href="mensajes.html" class="text-dark"><i class="fas fa-envelope fs-5"></i></a>
+      <a href="miCuenta.html" class="text-dark"><i class="fas fa-user fs-5"></i></a>
+    </nav>
+  </div>
+</header>
 
-  <main>
-    <form id="form-crear-producto">
-      <label>
-        Título:
-        <input type="text" id="titulo" name="titulo" required>
-      </label>
-      <label>
-        Descripción:
-        <textarea id="descripcion" name="descripcion"></textarea>
-      </label>
-      <label>
-        Precio inicial (€):
-        <input type="number" id="precioInicial" name="precioInicial" required min="0" step="0.01">
-      </label>
-      <label>
-        Nombres de imágenes:
-        <input type="text" id="imagenes" name="imagenes" placeholder="silla.jpg, mesa.png">
-      </label>
-      <label>
-        Fecha de expiración:
-        <input type="datetime-local" id="fechaExpiracion" name="fechaExpiracion" required>
-      </label>
-      <button type="submit">Crear</button>
-    </form>
-    <p id="error" style="color:red;"></p>
-  </main>
+<div class="container py-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-6">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <h2 class="card-title text-center mb-4">Vender nuevo producto</h2>
+          <form id="form-crear-producto">
+            <div class="mb-3">
+              <label for="titulo" class="form-label">Título</label>
+              <input type="text" class="form-control" id="titulo" name="titulo" required>
+            </div>
 
-  <script src="js/crearProducto.js"></script>
+            <div class="mb-3">
+              <label for="descripcion" class="form-label">Descripción</label>
+              <textarea class="form-control" id="descripcion" name="descripcion" rows="3"></textarea>
+            </div>
+
+            <div class="mb-3">
+              <label for="precioInicial" class="form-label">Precio inicial (€)</label>
+              <input type="number" class="form-control" id="precioInicial" name="precioInicial" required min="0" step="0.01">
+            </div>
+
+            <div class="mb-3">
+              <label for="imagenes" class="form-label">Nombres de imágenes</label>
+              <input type="text" class="form-control" id="imagenes" name="imagenes" placeholder="silla.jpg, mesa.png">
+            </div>
+
+            <div class="mb-3">
+              <label for="fechaExpiracion" class="form-label">Fecha de expiración</label>
+              <input type="datetime-local" class="form-control" id="fechaExpiracion" name="fechaExpiracion" required>
+            </div>
+
+            <div id="error" class="text-danger mb-3" style="display:none;"></div>
+
+            <div class="d-grid">
+              <button type="submit" class="btn btn-primary">Crear producto</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Contenedor para notificaciones -->
+<div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
+
+<!-- Solo un script con type="module" -->
+<script type="module" src="js/crearProducto.js"></script>
 </body>
 </html>
