--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,79 +1,96 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Tienda de Subastas - Inicio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Biddable | Subastas Exclusivas</title>
 
-  <!-- Google Font Inter -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
-
-  <!-- Font Awesome (para iconos de búsqueda, carrito, usuario) -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-
-  <!-- Estilos generales e index-specific -->
-  <link rel="stylesheet" href="css/estilos.css">
-  <link rel="stylesheet" href="css/index.css">
+  <!-- Bootstrap & Estilos -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-  <!-- HEADER -->
-  <header class="main-header">
-    <nav class="nav-left">
-      <a href="productos.html">Productos</a>
-      <a href="misPujas.html">Mis Pujas</a>
-      <a href="misProductos.html">Mis Productos</a>
+
+  <!-- HEADER MODIFICADO -->
+<header class="bg-white border-bottom shadow-sm sticky-top header-grande">
+  <div class="container d-flex align-items-center justify-content-between py-3">
+    <a href="index.html" class="d-flex align-items-center gap-3 text-decoration-none">
+      <img src="uploads/logo-removebg-preview.png" alt="Logo" height="60" />
+      <span class="fw-bold text-dark fs-4">Biddable</span>
+    </a>
+    <nav class="d-flex align-items-center gap-4">
+      <a href="productos.html" class="nav-link">Subastas</a>
+      <a href="misPujas.html" class="nav-link">Mis Pujas</a>
+      <a href="misProductos.html" class="nav-link">Mis Productos</a>
+      <a href="mensajes.html" class="text-dark"><i class="fas fa-envelope fs-5"></i></a>
+      <a href="miCuenta.html" class="text-dark"><i class="fas fa-user fs-5"></i></a>
     </nav>
+  </div>
+</header>
 
-    <div class="logo-container">
-      <a href="index.html">
-        <img src="uploads/logo-removebg-preview.png" alt="Logo Biddable" class="logo-img" />
-      </a>
+<!-- HERO MODIFICADO -->
+<section class="hero text-center py-5">
+  <div class="container hero-ancho">
+    <h1 class="fw-bold mb-3">Encuentra el producto perfecto, al mejor precio</h1>
+    <p class="text-light mb-4">Compra y vende en nuestra comunidad de subastas seguras, sin comisiones ocultas.</p>
+    <a href="productos.html" class="btn btn-primary px-4">Explorar Subastas</a>
+  </div>
+</section>
+
+  <!-- SUBASTAS ACTIVAS -->
+  <section class="container my-5">
+    <h2 class="mb-4 fw-semibold">Subastas activas</h2>
+    <div class="row g-4">
+      <!-- Producto 1 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="uploads/gafasvr.jpg" class="card-img-top" alt="Producto" />
+          <div class="card-body">
+            <h5 class="card-title fw-bold">Gafas VR Meta Quest</h5>
+            <p class="text-muted">Este producto ha sido pujado muchas veces últimamente</p>
+            <p class="fw-semibold mb-2">Última puja: 650€</p>
+            <a href="producto.html?id=684ae522dd8f80b10f4de175" class="btn btn-outline-dark w-100">Pujar</a>
+          </div>
+        </div>
+      </div>
+      <!-- Producto 2 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="uploads/nike.jpg" class="card-img-top" alt="Producto" />
+          <div class="card-body">
+            <h5 class="card-title fw-bold">Zapatillas Nike Air Jordan</h5>
+            <p class="text-muted">Este producto ha sido pujado muchas veces últimamente</p>
+            <p class="fw-semibold mb-2">Última puja: 1500€</p>
+            <a href="producto.html?id=684ae624dd8f80b10f4de181" class="btn btn-outline-dark w-100">Pujar</a>
+          </div>
+        </div>
+      </div>
+      <!-- Producto 3 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="uploads/apple.jpg" class="card-img-top" alt="Producto" />
+          <div class="card-body">
+            <h5 class="card-title fw-bold">Apple Watch Series 8</h5>
+            <p class="text-muted">Este producto ha sido pujado muchas veces últimamente</p>
+            <p class="fw-semibold mb-2">Última puja: 250€</p>
+            <a href="producto.html?id=684ae76fdd8f80b10f4de19f" class="btn btn-outline-dark w-100">Pujar</a>
+          </div>
+        </div>
+      </div>
     </div>
+  </section>
+<!-- Contenedor para notificaciones -->
+<div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
+<script src="js/notificacion.js"></script>
 
-    <div class="nav-right">
-      <button class="icon-btn" id="btn-buscar" title="Buscar">
-        <i class="fas fa-search"></i>
-      </button>
-      <button class="icon-btn" id="btn-mensajes" title="Mensajes" 
-        onclick="location.href='mensajes.html'">
-        <i class="fas fa-envelope"></i>
-      </button>
+  <!-- FOOTER -->
+  <footer class="text-center py-4 text-muted border-top">
+    <small>&copy; 2025 Biddable. Todos los derechos reservados.</small>
+  </footer>
 
-      <button class="icon-btn" id="btn-mi-cuenta" title="Mi Cuenta" onclick="location.href='miCuenta.html'">
-        <i class="fas fa-user"></i>
-      </button>
-    </div>
-  </header>
-
-  <!-- MAIN CONTENT -->
-  <main class="main-content">
-    <!-- 1) Galería de productos -->
-    <section class="product-slider">
-      <div class="slider-item">
-        <img src="uploads/imagen1.jpg" alt="Producto 1" class="slider-thumb">
-      </div>
-      <div class="slider-item">
-        <img src="uploads/imagen2.jpg" alt="Producto 2" class="slider-thumb">
-      </div>
-      <div class="slider-item">
-        <img src="uploads/imagen.webp" alt="Producto 3" class="slider-thumb">
-      </div>
-    </section>
-
-    <!-- 2) Área de contenido dinámica -->
-    <section class="content-area">
-      <!-- Aquí inyecta tu buscador, lista y paginación vía JS -->
-    </section>
-  </main>
-
-  <script src="js/main.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
