--- a/src/public/mensajes.html
+++ b/src/public/mensajes.html
@@ -2,53 +2,73 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Mensajes – Tienda Subastas</title>
+  <title>Mensajes – Biddable</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Bootstrap y fuentes -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/mensajes.css" />
   <link rel="stylesheet" href="css/index.css" />
-  <link rel="stylesheet" href="css/producto.css" />
-  <link rel="stylesheet" href="css/mensajes.css" /> <!-- o tu hoja general -->
 </head>
 <body>
-  <!-- Header idéntico al resto de la app -->
-  <header class="main-header">
-    <nav class="nav-left">
-      <a href="productos.html">Productos</a>
-      <a href="misPujas.html">Mis Pujas</a>
-      <a href="miCuenta.html">Mi Cuenta</a>
-    </nav>
-    <div class="logo-container">
-      <a href="index.html">
-        <img src="uploads/logo-removebg-preview.png" class="logo-img" alt="Logo" />
-        <span class="logo-text">Tienda Subastas</span>
+
+  <!-- HEADER -->
+  <header class="bg-white border-bottom shadow-sm sticky-top header-grande">
+    <div class="container d-flex align-items-center justify-content-between py-3">
+      <a href="index.html" class="d-flex align-items-center gap-3 text-decoration-none">
+        <img src="uploads/logo-removebg-preview.png" alt="Logo" height="60" />
+        <span class="fw-bold text-dark fs-4">Biddable</span>
       </a>
-    </div>
-    <div class="nav-right">
-      <!-- Reemplazamos carrito por mensajes (activo) -->
-      <button class="icon-btn" id="btn-mensajes" title="Mensajes">
-        <i class="fas fa-envelope"></i>
-      </button>
-      <button class="icon-btn" id="btn-mi-cuenta" title="Mi Cuenta" onclick="location.href='miCuenta.html'">
-        <i class="fas fa-user-circle"></i>
-      </button>
+      <nav class="d-flex align-items-center gap-4">
+        <a href="productos.html" class="nav-link">Subastas</a>
+        <a href="misPujas.html" class="nav-link">Mis Pujas</a>
+        <a href="misProductos.html" class="nav-link">Mis Productos</a>
+        <a href="mensajes.html" class="text-dark"><i class="fas fa-envelope fs-5"></i></a>
+        <a href="miCuenta.html" class="text-dark"><i class="fas fa-user fs-5"></i></a>
+      </nav>
     </div>
   </header>
 
-  <main class="main-content">
-    <section class="reseñas-container" style="max-width:800px; margin:2rem auto;">
-      <h2>Mensajes recibidos</h2>
-      <div id="lista-mensajes" class="lista-reseñas">
-        <!-- Aquí se cargarán los mensajes -->
-      </div>
+  <!-- MENSAJES -->
+  <main class="container my-5">
+    <h2 class="mb-4 fw-semibold text-center">Mensajes recibidos</h2>
 
-      <div id="no-mensajes" style="text-align:center; color:#777; display:none;">
-        No tienes mensajes.
-      </div>
-    </section>
+    <div id="lista-mensajes" class="d-flex flex-column gap-3">
+      <!-- Mensajes se inyectarán aquí -->
+    </div>
+
+    <div id="no-mensajes" class="text-center text-muted py-5" style="display: none;">
+      No tienes mensajes por ahora.
+    </div>
   </main>
 
-  <footer class="footer-simple">
-    <p>&copy; 2025 Tienda de Subastas. Todos los derechos reservados.</p>
-  </footer>
+  <!-- Modal para responder mensaje -->
+  <div class="modal fade" id="modal-respuesta" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalLabel">Responder mensaje</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+        </div>
+        <div class="modal-body">
+          <textarea id="input-respuesta" class="form-control" rows="4" placeholder="Escribe tu respuesta aquí..."></textarea>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button id="btn-enviar-respuesta" type="button" class="btn btn-primary">Enviar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <script src="js/mensajes.js"></script>
+  <!-- Contenedor para notificaciones -->
+  <div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
+
+  <!-- Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="js/mensajes.js"></script>
+  <script src="js/notificacion.js"></script>
 </body>
 </html>
