--- a/src/public/miCuenta.html
+++ b/src/public/miCuenta.html
@@ -2,125 +2,98 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Mi Cuenta - Tienda de Subastas</title>
+  <title>Mi Cuenta - Biddable</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Google Font Inter -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <!-- Bootstrap + Fuentes -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-  <!-- Font Awesome -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-
-  <!-- Estilos generales e index-specific -->
-  <link rel="stylesheet" href="css/estilos.css" />
+  <!-- Estilos personalizados -->
   <link rel="stylesheet" href="css/miCuenta.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-  <!-- HEADER -->
-  <header class="main-header">
-    <nav class="nav-left">
-      <a href="#">Enlace 1</a>
-      <a href="#">Enlace 2</a>
-      <a href="#">Enlace 3</a>
+
+   <!-- HEADER MODIFICADO -->
+<header class="bg-white border-bottom shadow-sm sticky-top header-grande">
+  <div class="container d-flex align-items-center justify-content-between py-3">
+    <a href="index.html" class="d-flex align-items-center gap-3 text-decoration-none">
+      <img src="uploads/logo-removebg-preview.png" alt="Logo" height="60" />
+      <span class="fw-bold text-dark fs-4">Biddable</span>
+    </a>
+    <nav class="d-flex align-items-center gap-4">
+      <a href="productos.html" class="nav-link">Subastas</a>
+      <a href="misPujas.html" class="nav-link">Mis Pujas</a>
+      <a href="misProductos.html" class="nav-link">Mis Productos</a>
+      <a href="mensajes.html" class="text-dark"><i class="fas fa-envelope fs-5"></i></a>
+      <a href="miCuenta.html" class="text-dark"><i class="fas fa-user fs-5"></i></a>
     </nav>
+  </div>
+</header>
 
-    <div class="logo-container">
-      <a href="index.html"><img src="uploads/logo-removebg-preview.png" alt="Logo Biddable" class="logo-img" /></a>
+  <!-- CONTENIDO PRINCIPAL -->
+  <main class="container my-5">
+    <div class="row">
+      <!-- Menú lateral -->
+      <aside class="col-md-3 mb-4">
+        <div class="list-group">
+          <button class="list-group-item list-group-item-action active" data-section="pujas-activas">Mis Pujas Activas</button>
+          <button class="list-group-item list-group-item-action" data-section="pujas-creadas">Mis Pujas Creadas</button>
+          <button class="list-group-item list-group-item-action" data-section="configuracion">Configuración</button>
+        </div>
+      </aside>
+
+      <!-- Secciones dinámicas -->
+      <section class="col-md-9">
+        <!-- PUJAS ACTIVAS -->
+        <div id="pujas-activas" class="seccion-activa">
+          <h3 class="mb-4">Mis Pujas Activas</h3>
+          <div id="lista-pujas-activas" class="d-flex flex-column gap-3">
+            <!-- Tarjetas dinámicas -->
+          </div>
+        </div>
+
+        <!-- PUJAS CREADAS -->
+        <div id="pujas-creadas" class="d-none">
+          <h3 class="mb-4">Mis Pujas Creadas</h3>
+          <div id="lista-pujas-creadas" class="d-flex flex-column gap-3">
+            <!-- Tarjetas dinámicas -->
+          </div>
+        </div>
+
+        <!-- CONFIGURACIÓN -->
+<div id="configuracion" class="d-none">
+  <h3 class="mb-4">Configuración de cuenta</h3>
+  <form id="form-configuracion" class="bg-light p-4 rounded shadow-sm">
+    <div class="mb-3">
+      <label for="username-config" class="form-label">Nombre de usuario</label>
+      <input type="text" id="username-config" name="username" class="form-control" required>
     </div>
-
-    <div class="nav-right">
-      <button class="icon-btn" id="btn-buscar" title="Buscar">
-        <i class="fas fa-search"></i>
-      </button>
-      <button class="icon-btn" id="btn-carrito" title="Carrito">
-        <i class="fas fa-shopping-cart"></i>
-      </button>
-      <button class="icon-btn" id="btn-usuario" title="Perfil">
-        <i class="fas fa-user"></i>
-      </button>
-      <button id="btn-logout" class="icon-btn" title="Cerrar sesión">
-        <i class="fas fa-sign-out-alt"></i>
-      </button>
+    <div class="mb-3">
+      <label for="email-config" class="form-label">Correo electrónico</label>
+      <input type="email" id="email-config" name="email" class="form-control" required>
     </div>
-  </header>
-
-  <main class="perfil-contenedor">
-    <aside class="menu-lateral">
-      <nav>
-        <ul>
-          <li>
-            <button class="menu-btn active" data-section="pujas-activas">
-              Mis Pujas Activas
-            </button>
-          </li>
-          <li>
-            <button class="menu-btn" data-section="pujas-creadas">
-              Mis Pujas Creadas
-            </button>
-          </li>
-          <li>
-            <button class="menu-btn" data-section="configuracion">
-              Configuración de Cuenta
-            </button>
-          </li>
-        </ul>
-      </nav>
-    </aside>
-
-    <section class="contenido-principal">
-      <section id="pujas-activas" class="seccion-activa">
-        <h2>Mis Pujas Activas</h2>
-        <div id="lista-pujas-activas" class="lista-pujas"></div>
-      </section>
-
-      <section id="pujas-creadas" class="seccion-oculta">
-        <h2>Mis Pujas Creadas</h2>
-        <div id="lista-pujas-creadas" class="lista-pujas"></div>
-      </section>
-
-      <section id="configuracion" class="seccion-oculta">
-        <h2>Configuración de Cuenta</h2>
-        <form id="form-configuracion">
-          <label for="username-config">Nombre de usuario:</label>
-          <input
-            type="text"
-            id="username-config"
-            name="username"
-            required
-            autocomplete="username"
-          />
-
-          <label for="email-config">Correo electrónico:</label>
-          <input
-            type="email"
-            id="email-config"
-            name="email"
-            required
-            autocomplete="email"
-          />
-
-          <label for="password-config">Cambiar contraseña:</label>
-          <input
-            type="password"
-            id="password-config"
-            name="password"
-            placeholder="Nueva contraseña"
-            autocomplete="new-password"
-          />
-
-          <button type="submit" class="btn-guardar">Guardar cambios</button>
-        </form>
-      </section>
-    </section>
+    <div class="mb-3">
+      <label for="password-config" class="form-label">Cambiar contraseña</label>
+      <input type="password" id="password-config" name="password" class="form-control" placeholder="Nueva contraseña">
+    </div>
+    <div class="d-flex justify-content-between align-items-center mt-4">
+      <button type="submit" class="btn btn-primary">Guardar cambios</button>
+      <button type="button" id="btn-logout" class="btn btn-outline-danger">Cerrar sesión</button>
+    </div>
+  </form>
+</div>
   </main>
+<!-- Contenedor para notificaciones -->
+<div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
+<script src="js/notificacion.js"></script>
+
+  <!-- FOOTER -->
+  <footer class="text-center py-4 text-muted border-top">
+    <small>&copy; 2025 Biddable. Todos los derechos reservados.</small>
+  </footer>
 
   <script src="js/miCuenta.js"></script>
 </body>
