--- a/src/public/misProductos.html
+++ b/src/public/misProductos.html
@@ -2,62 +2,57 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Mis Productos - Tienda Subastas</title>
+  <title>Mis Productos - Biddable</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Fonts Inter -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <!-- Bootstrap + Fuentes -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-  <!-- Font Awesome -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    crossorigin="anonymous"
-  />
-
-  <!-- Estilos específicos para esta página -->
+  <!-- Estilos personalizados -->
   <link rel="stylesheet" href="css/misProductos.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-  <!-- HEADER (igual que en otras páginas) -->
-  <header class="main-header">
-    <div class="logo-container">
-      <a href="index.html"><img src="uploads/logo-removebg-preview.png" alt="Logo Biddable" class="logo-img" /></a>
-      <span class="logo-text">Tienda Subastas</span>
-    </div>
 
-    <div class="header-actions">
-      <a href="/" class="btn-volver"><i class="fas fa-arrow-left"></i> Volver</a>
-      <a href="/misProductos.html" class="btn-mis-productos active">
-        <i class="fas fa-box"></i> Mis Productos
+  <!-- HEADER MODIFICADO -->
+  <header class="bg-white border-bottom shadow-sm sticky-top header-grande">
+  <div class="container d-flex align-items-center justify-content-between py-3">
+    <a href="index.html" class="d-flex align-items-center gap-3 text-decoration-none">
+      <img src="uploads/logo-removebg-preview.png" alt="Logo" height="60" />
+      <span class="fw-bold text-dark fs-4">Biddable</span>
+    </a>
+    <nav class="d-flex align-items-center gap-4">
+      <a href="productos.html" class="nav-link">Subastas</a>
+      <a href="misPujas.html" class="nav-link">Mis Pujas</a>
+      <a href="misProductos.html" class="nav-link">Mis Productos</a>
+      <a href="mensajes.html" class="text-dark"><i class="fas fa-envelope fs-5"></i></a>
+      <a href="miCuenta.html" class="text-dark"><i class="fas fa-user fs-5"></i></a>
+    </nav>
+  </div>
+</header>
+
+  <!-- CONTENIDO PRINCIPAL -->
+  <main class="container my-5">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2 class="fw-bold text-primary">Mis Productos</h2>
+      <a href="crearProducto.html" class="btn btn-primary">
+        <i class="fas fa-plus me-2"></i>Nuevo Producto
       </a>
-      <button class="btn-logout" id="btn-logout" title="Cerrar sesión">
-        <i class="fas fa-sign-out-alt"></i> Cerrar sesión
-      </button>
     </div>
-  </header>
-
-  <main class="main-content">
-    <section class="mis-productos-container">
-      <div class="cabecera-seccion">
-        <h1>Mis Productos</h1>
-        <a href="/crearProducto.html" class="btn-crear-producto">
-          <i class="fas fa-plus"></i> Nuevo Producto
-        </a>
-      </div>
-      <div id="lista-mis-productos" class="lista-productos">
-        <!-- Aquí inyectaremos las tarjetas vía JS -->
-      </div>
-    </section>
+    <div id="lista-mis-productos">
+      <!-- Tarjetas dinámicas se insertarán aquí -->
+    </div>
   </main>
+<!-- Contenedor para notificaciones -->
+<div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
+<script src="js/notificacion.js"></script>
 
-  <footer class="footer-simple">
-    <p>&copy; 2025 Tienda de Subastas. Todos los derechos reservados.</p>
+  <!-- FOOTER -->
+  <footer class="text-center py-4 text-muted border-top">
+    <small>&copy; 2025 Biddable. Todos los derechos reservados.</small>
   </footer>
-
-  <script src="js/misProductos.js"></script>
+  <script src="js/misProductos.js"></script> 
 </body>
 </html>
