--- a/src/public/misPujas.html
+++ b/src/public/misPujas.html
@@ -2,76 +2,56 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Mis Pujas – Tienda de Subastas</title>
+  <title>Mis Pujas – Biddable</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Fonts Inter -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <!-- Bootstrap + Fuentes -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-  <!-- Font Awesome (para iconos) -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    crossorigin="anonymous"
-  />
-
-  <!-- Paleta global (index.css) -->
-  <link rel="stylesheet" href="css/index.css" />
-
-  <!-- Estilos específicos de Mis Pujas -->
+  <!-- Estilos personalizados -->
   <link rel="stylesheet" href="css/misPujas.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-  <!-- HEADER compartido -->
-  <header class="main-header">
-    <nav class="nav-left">
-      <a href="index.html">Inicio</a>
-      <a href="misPujas.html" class="active">Mis Pujas</a>
-      <a href="miCuenta.html">Mi Cuenta</a>
+
+  <!-- HEADER UNIFICADO -->
+  <header class="bg-white border-bottom shadow-sm sticky-top header-grande">
+  <div class="container d-flex align-items-center justify-content-between py-3">
+    <a href="index.html" class="d-flex align-items-center gap-3 text-decoration-none">
+      <img src="uploads/logo-removebg-preview.png" alt="Logo" height="60" />
+      <span class="fw-bold text-dark fs-4">Biddable</span>
+    </a>
+    <nav class="d-flex align-items-center gap-4">
+      <a href="productos.html" class="nav-link">Subastas</a>
+      <a href="misPujas.html" class="nav-link">Mis Pujas</a>
+      <a href="misProductos.html" class="nav-link">Mis Productos</a>
+      <a href="mensajes.html" class="text-dark"><i class="fas fa-envelope fs-5"></i></a>
+      <a href="miCuenta.html" class="text-dark"><i class="fas fa-user fs-5"></i></a>
     </nav>
+  </div>
+</header>
 
-    <div class="logo-container">
-      <a href="index.html"><img src="uploads/logo-removebg-preview.png" alt="Logo Biddable" class="logo-img" /></a>
+  <!-- CONTENIDO -->
+  <main class="container my-5">
+    <div class="text-center mb-4">
+      <h2 class="fw-bold text-primary">Mis Pujas</h2>
+      <p id="sin-pujas" class="text-muted mt-3" style="display: none;">No has realizado ninguna puja todavía.</p>
     </div>
 
-    <div class="nav-right">
-      <button class="icon-btn" id="btn-buscar" title="Buscar">
-        <i class="fas fa-search"></i>
-      </button>
-      <button class="icon-btn" id="btn-carrito" title="Carrito">
-        <i class="fas fa-shopping-cart"></i>
-      </button>
-      <button class="icon-btn" id="btn-mi-cuenta" title="Mi Cuenta" onclick="location.href='miCuenta.html'">
-        <i class="fas fa-user-circle"></i>
-      </button>
-      <button class="icon-btn" id="btn-logout" title="Cerrar sesión">
-        <i class="fas fa-sign-out-alt"></i>
-      </button>
+    <div id="lista-pujas" class="row gy-4">
+      <!-- Tarjetas dinámicas de pujas -->
     </div>
-  </header>
-
-  <!-- CONTENIDO PRINCIPAL -->
-  <main class="pujas-container">
-    <h1 class="pujas-titulo">Mis Pujas</h1>
-
-    <!-- Mensaje cuando no haya pujas -->
-    <p id="sin-pujas" class="sin-pujas" style="display: none;">
-      No has realizado ninguna puja todavía.
-    </p>
-
-    <!-- Aquí se inyectan las tarjetas de puja -->
-    <div id="lista-pujas" class="lista-pujas"></div>
   </main>
+<!-- Contenedor para notificaciones -->
+<div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
+<script src="js/notificacion.js"></script>
 
   <!-- FOOTER -->
-  <footer class="footer-simple">
-    <p>&copy; 2025 Tienda de Subastas. Todos los derechos reservados.</p>
+  <footer class="text-center py-4 text-muted border-top">
+    <small>&copy; 2025 Biddable. Todos los derechos reservados.</small>
   </footer>
-
-  <!-- Script de manejo -->
   <script src="js/misPujas.js"></script>
 </body>
 </html>
