--- a/src/public/productos.html
+++ b/src/public/productos.html
@@ -3,102 +3,96 @@
 <head>
   <meta charset="UTF-8" />
   <title>Productos - Tienda de Subastas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Google Fonts Inter -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
-  <!-- Font Awesome (para iconos) -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    crossorigin="anonymous"
-  />
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!-- Estilos generales (index.css o equivalentes) -->
-  <link rel="stylesheet" href="css/index.css" />
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-  <!-- Estilos específicos de productos -->
+  <!-- Estilos personalizados -->
   <link rel="stylesheet" href="css/productos.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
-<body>
-  <!-- HEADER compartido con toda la app -->
-  <header class="main-header">
-    <nav class="nav-left">
-      <a href="productos.html" class="active">Productos</a>
-      <a href="misPujas.html">Mis Pujas</a>
-      <a href="miCuenta.html">Mi Cuenta</a>
+<body class="bg-light">
+
+  <!-- HEADER -->
+  <header class="bg-white border-bottom shadow-sm sticky-top header-grande">
+  <div class="container d-flex align-items-center justify-content-between py-3">
+    <a href="index.html" class="d-flex align-items-center gap-3 text-decoration-none">
+      <img src="uploads/logo-removebg-preview.png" alt="Logo" height="60" />
+      <span class="fw-bold text-dark fs-4">Biddable</span>
+    </a>
+    <nav class="d-flex align-items-center gap-4">
+      <a href="productos.html" class="nav-link">Subastas</a>
+      <a href="misPujas.html" class="nav-link">Mis Pujas</a>
+      <a href="misProductos.html" class="nav-link">Mis Productos</a>
+      <a href="mensajes.html" class="text-dark"><i class="fas fa-envelope fs-5"></i></a>
+      <a href="miCuenta.html" class="text-dark"><i class="fas fa-user fs-5"></i></a>
     </nav>
+  </div>
+</header>
 
-    <div class="logo-container">
-      <a href="index.html"><img src="uploads/logo-removebg-preview.png" alt="Logo Biddable" class="logo-img" /></a>
-    </div>
+  <!-- CONTENIDO PRINCIPAL -->
+  <main class="container my-5">
 
-    <div class="nav-right">
-      <button class="icon-btn" id="btn-buscar" title="Buscar">
-        <img src="uploads/buscar.png" alt="Buscar" class="icon-img" />
-      </button>
-      <button class="icon-btn" id="btn-carrito" title="Carrito">
-        <img src="uploads/carrito.png" alt="Carrito" class="icon-img" />
-      </button>
-      <button class="icon-btn" id="btn-mi-cuenta" title="Mi Cuenta" onclick="location.href='miCuenta.html'">
-        <img src="uploads/miCuenta.png" alt="Mi Cuenta" class="icon-img" />
-      </button>
-    </div>
-  </header>
-
-  <!-- MAIN CONTENT -->
-  <main class="productos-contenedor">
-    <!-- 1) Zona de Filtros -->
-    <section class="filtros">
-      <h2>Filtrar productos</h2>
-      <form id="form-filtros" novalidate>
-        <div class="filtro-item">
-          <label for="precio-min">Precio mínimo (€):</label>
-          <input type="number" id="precio-min" name="precioMin" min="0" step="0.01" placeholder="0.00" />
+    <!-- FILTROS -->
+    <section class="bg-white p-4 rounded shadow-sm mb-4">
+      <h2 class="h5 text-primary mb-3">Filtrar productos</h2>
+      <form id="form-filtros" class="row g-3 align-items-end">
+        <div class="col-md-3">
+          <label for="precio-min" class="form-label">Precio mínimo (€):</label>
+          <input type="number" class="form-control" id="precio-min" name="precioMin" placeholder="0.00" min="0" step="0.01" />
         </div>
-        <div class="filtro-item">
-          <label for="precio-max">Precio máximo (€):</label>
-          <input type="number" id="precio-max" name="precioMax" min="0" step="0.01" placeholder="0.00" />
+        <div class="col-md-3">
+          <label for="precio-max" class="form-label">Precio máximo (€):</label>
+          <input type="number" class="form-control" id="precio-max" name="precioMax" placeholder="0.00" min="0" step="0.01" />
         </div>
-        <div class="filtro-item">
-          <label for="fecha-expiracion">Caduca antes de:</label>
-          <input type="date" id="fecha-expiracion" name="fechaExpiracion" />
+        <div class="col-md-3">
+          <label for="fecha-expiracion" class="form-label">Caduca antes de:</label>
+          <input type="date" class="form-control" id="fecha-expiracion" name="fechaExpiracion" />
         </div>
-        <div class="filtro-item">
-          <label for="categoria">Categoría:</label>
-          <select id="categoria" name="categoria">
+        <div class="col-md-3">
+          <label for="categoria" class="form-label">Categoría:</label>
+          <select class="form-select" id="categoria" name="categoria">
             <option value="">-- Todas --</option>
-            <!-- Se llenará dinámicamente -->
+            <!-- Categorías dinámicas -->
           </select>
         </div>
-        <div class="filtro-botones">
-          <button type="submit" class="btn-aplicar">Aplicar filtros</button>
-          <button type="button" id="btn-limpiar" class="btn-limpiar">Limpiar</button>
+        <div class="col-12 d-flex gap-2 mt-3">
+          <button type="submit" class="btn btn-primary">Aplicar filtros</button>
+          <button type="button" class="btn btn-secondary" id="btn-limpiar">Limpiar</button>
         </div>
       </form>
     </section>
 
-    <!-- 2) Listado de Productos -->
-    <section class="lista-productos" id="lista-productos">
-      <!-- Aquí se insertan dinámicamente las tarjetas -->
+    <!-- LISTA DE PRODUCTOS -->
+    <section id="lista-productos" class="row g-4">
+      <!-- Se insertan tarjetas dinámicamente -->
     </section>
 
-    <!-- 3) Mensaje si no hay productos -->
-    <div id="sin-productos" class="sin-productos" style="display: none;">
+    <!-- MENSAJE SIN PRODUCTOS -->
+    <div id="sin-productos" class="alert alert-info text-center mt-4 d-none">
       No se encontraron productos que coincidan con los filtros.
     </div>
   </main>
+<!-- Contenedor para notificaciones -->
+<div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
+<script src="js/notificacion.js"></script>
 
-  <!-- FOOTER simple -->
-  <footer class="footer-simple productos-footer">
-    <p>&copy; 2025 Tienda de Subastas. Todos los derechos reservados.</p>
+  <!-- FOOTER -->
+  <footer class="bg-white border-top py-4 text-center text-muted">
+    <p class="mb-0">&copy; 2025 Tienda de Subastas. Todos los derechos reservados.</p>
   </footer>
 
-  <!-- Script de productos -->
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Script específico -->
   <script src="js/productos.js"></script>
 </body>
 </html>
