--- a/src/public/registro.html
+++ b/src/public/registro.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Iniciar Sesión - Biddable</title>
+  <title>Registro - Biddable</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Bootstrap + Estilos -->
@@ -17,24 +17,36 @@
     <div class="login-box shadow">
       <div class="text-center mb-4">
         <img src="uploads/logo-removebg-preview.png" alt="Logo Biddable" height="60">
-        <h2 class="mt-3 fw-bold">Bienvenido de nuevo</h2>
-        <p class="text-muted">Inicia sesión para acceder a tu cuenta</p>
+        <h2 class="mt-3 fw-bold">Crear cuenta</h2>
+        <p class="text-muted">Regístrate para comenzar a usar Biddable</p>
       </div>
-      <form id="form-login">
+      <form id="form-registro">
         <div class="mb-3 input-icon">
           <i class="fas fa-user"></i>
-          <input type="text" id="usuario" class="form-control" placeholder="Usuario" required>
+          <input type="text" id="username" class="form-control" placeholder="Nombre de usuario" required>
+        </div>
+        <div class="mb-3 input-icon">
+          <i class="fas fa-envelope"></i>
+          <input type="email" id="email" class="form-control" placeholder="Correo electrónico" required>
         </div>
         <div class="mb-4 input-icon">
           <i class="fas fa-lock"></i>
-          <input type="password" id="contrasena" class="form-control" placeholder="Contraseña" required>
+          <input type="password" id="password" class="form-control" placeholder="Contraseña" required>
+        </div>
+        <div class="mb-3 input-icon">
+        <i class="fas fa-user-tag"></i>
+        <select id="rol" class="form-control" required>
+            <option value="" disabled selected>Selecciona un rol</option>
+            <option value="usuario">Usuario</option>
+            <option value="admin">Administrador</option>
+        </select>
         </div>
         <div class="d-grid gap-2 mb-3">
-          <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-          <button type="button" class="btn btn-outline-secondary">Cancelar</button>
+          <button type="submit" class="btn btn-primary">Registrarse</button>
+          <button type="button" class="btn btn-outline-secondary" onclick="window.location.href='login.html'">Cancelar</button>
         </div>
         <div class="text-center mt-3 small">
-          <a href="registro.html">¿No tienes cuenta?</a> · <a href="#">¿Olvidaste tu contraseña?</a>
+          ¿Ya tienes cuenta? <a href="login.html">Inicia sesión</a>
         </div>
       </form>
     </div>
@@ -43,6 +55,6 @@
 <div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
 <script src="js/notificacion.js"></script>
 
-  <script src="js/login.js"></script>
+  <script src="js/registro.js"></script>
 </body>
 </html>
